<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal">

        <TextView
            android:id="@+id/textProfile_2"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="173dp"
            android:text="@string/title_profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <ImageView
            android:id="@+id/to_logout"
            android:layout_width="44dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_logout_24"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


<!--    <TextView-->
<!--        android:id="@+id/textProfile"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:gravity="left"-->
<!--        android:text="@string/title_profile"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.075" />-->

    <RelativeLayout
        android:id="@+id/view_box"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:background="@drawable/button_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258">

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_logout" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_avatar"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_avatar"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_location_city"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/location" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded"
        android:gravity="left"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view_box"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view_box"
        app:layout_constraintTop_toBottomOf="@+id/view_box" />

    <Button
        android:id="@+id/btn_shopping_address"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:gravity="left"
        android:text="@string/shopping_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile" />

    <Button
        android:id="@+id/btn_order_history"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:gravity="left"
        android:text="@string/order_history"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_shopping_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_shopping_address"
        app:layout_constraintTop_toBottomOf="@+id/btn_shopping_address" />

    <Button
        android:id="@+id/btn_cards"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:gravity="left"
        android:text="@string/cards"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_order_history"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_order_history"
        app:layout_constraintTop_toBottomOf="@+id/btn_order_history" />

    <Button
        android:id="@+id/btn_my_store"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:gravity="left"
        android:text="@string/my_store"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_cards"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_cards"
        app:layout_constraintTop_toBottomOf="@+id/btn_cards" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.06"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
